--- a/src/expb/payloads/executor/services/templates/k6-script.js.j2
+++ b/src/expb/payloads/executor/services/templates/k6-script.js.j2
@@ -108,7 +108,7 @@ function processPayload(idx, base_tags = {}, warmup = false) {
   group('engine_newPayload', function () {
     const tags = { jrpc_method: extractMethodFast(payloadRaw) || 'engine_newPayload', kind: 'newPayload', ...base_tags };
     const headers = { Authorization: 'Bearer ' + tokGP, 'Content-Type': 'application/json' };
-    if (ADD_CORRELATION_HEADER) headers['X-Expb-Cid'] = cid();
+    if (!warmup && ADD_CORRELATION_HEADER) headers['X-Expb-Cid'] = cid();
 
     const r = http.post(engineEndpoint, payloadRaw, { headers, tags });
     check(r, { 'status_200': (x) => x.status === 200 }, tags);
@@ -137,7 +137,7 @@ function processPayload(idx, base_tags = {}, warmup = false) {
   group('engine_forkchoiceUpdated', function () {
     const tags = { jrpc_method: extractMethodFast(fcuRaw) || 'engine_forkchoiceUpdated', kind: 'forkchoiceUpdated', ...base_tags };
     const headers = { Authorization: 'Bearer ' + tokFC, 'Content-Type': 'application/json' };
-    if (ADD_CORRELATION_HEADER) headers['X-Expb-Cid'] = cid();
+    if (!warmup && ADD_CORRELATION_HEADER) headers['X-Expb-Cid'] = cid();
 
     const r = http.post(engineEndpoint, fcuRaw, { headers, tags });
     check(r, { 'status_200': (x) => x.status === 200 }, tags);
